0.37    
        Fixed bug in diff view - the versions are the right way round now...

0.36    13 July 2004
        Added diff link to node template. Fixed case sensitivity bug in
          index node autocreation.  Fixed bug with node history comments
          not being HTML-escaped.

0.35    25 June 2004
        Forgot to add version prerequisite on CGI::Wiki.  Don't use 0.34,
          use this.

0.34    25 June 2004
        Add facility to delete only certain revisions of a page - access
          this from the node history page.

0.33    20 June 2004
        Improve node history page to allow diffing between each version and
          the previous one or the current one.
        Test overhauls - you don't need to run the configuration step in
          order to run the tests now, but you do need to have DBD::SQLite
          for most of them.
        Fixed template bug in display_metadata.tt that was stopping map
          links being displayed for nodes with no address data (spotted
          by Steve Jolly).
	Removed inline style from recent_changes.tt. You will need to add
	  the styles table#recentchanges, td.recentchanges_meta,
	  td.recentchanges_user, td.recentchanges_node_name and
	  td.recentchanges_comment to your stylesheets.
	  td#map changed to td#map_link in edit_conflict.tt.
        Added searching by distance from an arbitrary point (click on
          Advanced Search).
        Internal rejigging - extracted some methods from wiki.cgi to
          OpenGuides.pm.
        Added new preference for default edit type.
        Reinstate apparently lost change from 0.26 to show IP rather than 
          "Anonymous" in RecentChanges.
        More informative <title> tags for non-node (e.g. node version
          history) pages.

0.32    7 June 2004
        Change auto-creating behaviour of index nodes (categories and
	  locales): instead of being created on access they are created
	  when the referring node is committed. This fixes compliance with