@@ -61,6 +61,7 @@ t/51_display_node.t
 t/52_display_diffs.t
 t/53_show_index.t
 t/54_redirect.t
+t/55_node_history.t
 t/61_bug_textareas.t
 t/62_bug_os_coords.t
 t/63_bug_map_link_no_address.t
